Implementation of Item Information Widget

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -156,12 +156,13 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 LastLevel=/Game/Maps/DemoMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
+OpenAssetsAtExit=/Game/Blueprints/Items/BP_Item.BP_Item
 OpenAssetsAtExit=/Game/Blueprints/Player/BP_PlayerCharacter.BP_PlayerCharacter
-OpenAssetsAtExit=/Game/Blueprints/Interactables/BP_Interactable.BP_Interactable
+OpenAssetsAtExit=/Game/Blueprints/HUDs/WBP_InfoWidget.WBP_InfoWidget
 
 [RootWindow]
-ScreenPosition=X=320.000 Y=156.000
+ScreenPosition=X=634.000 Y=306.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -1201,6 +1202,8 @@ Voice.TimeStamp=2022.11.24-19.32.29
 Voice.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2022.11.24-19.32.23
 MovieSceneCapture.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2022.11.24-19.32.26
+SequencerWidgets.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
@@ -1254,7 +1257,7 @@ TimelineEnabledSnaps=MontageSection
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Object="\"Object\" "
 PersonaPreviewSceneDescription="\"Object\" "
 PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object\" \"Object.SkeletalMeshes\" "
@@ -1268,10 +1271,10 @@ Material="\"Object\" "
 MaterialInterface="\"Object\" "
 SkeletalMeshComponent="\"Object\" "
 SkinnedMeshComponent="\"Object\" "
-MeshComponent="\"Object\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-PrimitiveComponent="\"Object\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-SceneComponent="\"Object\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-ActorComponent="\"Object\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+MeshComponent="\"Object\" "
+PrimitiveComponent="\"Object\" "
+SceneComponent="\"Object\" "
+ActorComponent="\"Object\" "
 CapsuleComponent="\"Object\" "
 ShapeComponent="\"Object\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 InputAction="\"Object\" "
@@ -1396,6 +1399,21 @@ AnimGraphNode_TransitionResult="\"Object\" "
 StaticMeshComponent="\"Object\" "
 SphereComponent="\"Object\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 WidgetComponent="\"Object\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Overlay="\"Object\" "
+PanelWidget="\"Object\" "
+Widget="\"Object\" "
+Visual="\"Object\" "
+Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.Margin\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.Brush.OutlineSettings\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot.Object.Layout.Layout|Overlay Slot.Padding\" "
+HorizontalBox="\"Object\" "
+VerticalBox="\"Object\" "
+TextBlock="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" "
+TextLayoutWidget="\"Object\" \"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.TextStyle\" \"Object.Style.WidgetStyle.TextStyle.Font\" \"Object.Style.WidgetStyle.TextStyle.Font.OutlineSettings\" \"Object.Layout.Slot.Object.Layout.Layout|Overlay Slot.Padding\" "
+UserDefinedEnum="\"Object\" "
+Enum="\"Object\" "
+Field="\"Object\" "
+WBP_InfoWidget_C="\"Object\" "
+UserWidget="\"Object\" "
+MultiLineEditableTextBox="\"Object\" \"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.TextStyle\" \"Object.Style.WidgetStyle.TextStyle.Font\" \"Object.Style.WidgetStyle.TextStyle.Font.OutlineSettings\" \"Object.Layout.Slot.Object.Layout.Layout|Overlay Slot.Padding\" "
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1410,7 +1428,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Blueprints/Interactables
+ContentBrowserDrawer.SelectedPaths=/Game/Blueprints
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1465,25 +1483,26 @@ ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Interactables/BP_Interactable
+MRUItem0=/Game/Blueprints/HUDs/WBP_InfoWidget
 MRUItem1=/Game/Blueprints/Player/BP_PlayerCharacter
-MRUItem2=/Game/Blueprints/BP_PlayerCharacter
-MRUItem3=/Game/Animations/PlayerAnimInstance
-MRUItem4=/Game/Assets/PolygonOffice/Rigs/RTG_XBot
-MRUItem5=/Game/Assets/PolygonOffice/Rigs/IK_Player
-MRUItem6=/Game/Animations/Mixamo/IKRig_XBot
-MRUItem7=/Game/Assets/PolygonOffice/Meshes/Characters/SK_Chr_Boss_Female_01_Skeleton
-MRUItem8=/Game/Assets/PolygonOffice/Meshes/Characters/SK_Chr_Developer_Male_01
-MRUItem9=/Game/Blueprints/Input/InputActions/IA_Look
-MRUItem10=/Game/Blueprints/Input/IMC_Character
-MRUItem11=/Game/Maps/DemoMap
-MRUItem12=/Game/Blueprints/BP_EFTOGameMode
-MRUItem13=/Game/Blueprints/Input/InputActions/IA_Run
-MRUItem14=/Game/Blueprints/Input/InputActions/IA_Move
-MRUItem15=/Game/Assets/PolygonSpy/Meshes/Props/SK_Prop_ID_01
-MRUItem16=/Game/Assets/PolygonSpy/Materials/Mat_PolygonSpy_01_A
-MRUItem17=/Game/Assets/PolygonSpy/Meshes/Characters/SK_Chr_Female_Spy
-MRUItem18=/Game/Assets/PolygonSpy/Meshes/Vehicles/SK_Prop_Drone_01
+MRUItem2=/Game/Blueprints/Items/BP_Item
+MRUItem3=/Game/Blueprints/Interactables/BP_Item
+MRUItem4=/Game/Blueprints/EItemType
+MRUItem5=/Game/Blueprints/Interactables/BP_InteractableItem
+MRUItem6=/Game/Blueprints/Interactables/BP_Interactable
+MRUItem7=/Game/Blueprints/BP_PlayerCharacter
+MRUItem8=/Game/Animations/PlayerAnimInstance
+MRUItem9=/Game/Assets/PolygonOffice/Rigs/RTG_XBot
+MRUItem10=/Game/Assets/PolygonOffice/Rigs/IK_Player
+MRUItem11=/Game/Animations/Mixamo/IKRig_XBot
+MRUItem12=/Game/Assets/PolygonOffice/Meshes/Characters/SK_Chr_Boss_Female_01_Skeleton
+MRUItem13=/Game/Assets/PolygonOffice/Meshes/Characters/SK_Chr_Developer_Male_01
+MRUItem14=/Game/Blueprints/Input/InputActions/IA_Look
+MRUItem15=/Game/Blueprints/Input/IMC_Character
+MRUItem16=/Game/Maps/DemoMap
+MRUItem17=/Game/Blueprints/BP_EFTOGameMode
+MRUItem18=/Game/Blueprints/Input/InputActions/IA_Run
+MRUItem19=/Game/Blueprints/Input/InputActions/IA_Move
 
 [DetailCategories]
 SkeletalMesh.Material Slots=True
@@ -2203,6 +2222,106 @@ K2Node_CallFunction.Outputs=True
 BP_Interactable_C.TransformCommon=True
 SphereComponent.Mobile=True
 SphereComponent.AssetUserData=False
+Overlay.Behavior=False
+Overlay.Accessibility=True
+Overlay.Render Transform=True
+Overlay.Performance=True
+Overlay.Clipping=True
+Overlay.Navigation=True
+Overlay.Localization=True
+Image.Layout=True
+Image.Appearance=True
+Image.Accessibility=True
+Image.Behavior=True
+Image.Render Transform=True
+Image.Performance=True
+Image.Clipping=True
+Image.Navigation=True
+Image.Localization=True
+Image.Events=True
+HorizontalBox.Layout=True
+HorizontalBox.Behavior=True
+HorizontalBox.Accessibility=True
+HorizontalBox.Render Transform=True
+HorizontalBox.Performance=True
+HorizontalBox.Clipping=True
+HorizontalBox.Navigation=True
+HorizontalBox.Localization=True
+VerticalBox.Layout=True
+VerticalBox.Behavior=True
+VerticalBox.Accessibility=True
+VerticalBox.Render Transform=True
+VerticalBox.Performance=True
+VerticalBox.Clipping=True
+VerticalBox.Navigation=True
+VerticalBox.Localization=True
+Overlay.Layout=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Accessibility=True
+TextBlock.Performance=True
+TextBlock.Clipping=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Navigation=True
+TextBlock.Localization=True
+BP_InteractableItem_C.Collision=True
+BP_InteractableItem_C.Tick=True
+BP_InteractableItem_C.Replication=True
+BP_InteractableItem_C.Rendering=True
+BP_InteractableItem_C.Actor=True
+BP_InteractableItem_C.Input=True
+BP_InteractableItem_C.HLOD=True
+BP_InteractableItem_C.Physics=True
+BP_InteractableItem_C.Networking=True
+BP_InteractableItem_C.WorldPartition=True
+BP_InteractableItem_C.Events=True
+PropertyWrapper.Events=True
+K2Node_VariableSet.Events=True
+UserDefinedEnum.Description=True
+UserDefinedEnum.Enumerators=True
+WBP_InfoWidget_C.Appearance=True
+WBP_InfoWidget_C.Designer=True
+WBP_InfoWidget_C.Input=True
+WBP_InfoWidget_C.Interaction=True
+WBP_InfoWidget_C.Performance=True
+WBP_InfoWidget_C.Layout=True
+WBP_InfoWidget_C.Behavior=True
+WBP_InfoWidget_C.Render Transform=True
+WBP_InfoWidget_C.Localization=True
+WBP_InfoWidget_C.Accessibility=True
+WBP_InfoWidget_C.Clipping=True
+WBP_InfoWidget_C.Navigation=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
+MultiLineEditableTextBox.Layout=True
+MultiLineEditableTextBox.Content=True
+MultiLineEditableTextBox.Style=True
+MultiLineEditableTextBox.Accessibility=True
+MultiLineEditableTextBox.Appearance=True
+MultiLineEditableTextBox.Behavior=True
+MultiLineEditableTextBox.Wrapping=True
+MultiLineEditableTextBox.Render Transform=True
+MultiLineEditableTextBox.Performance=True
+MultiLineEditableTextBox.Clipping=True
+MultiLineEditableTextBox.Navigation=True
+MultiLineEditableTextBox.Localization=True
+MultiLineEditableTextBox.Events=True
+BP_Item_C.Default=True
+BP_Item_C.Tick=True
+BP_Item_C.Collision=True
+BP_Item_C.Replication=True
+BP_Item_C.Rendering=True
+BP_Item_C.Actor=True
+BP_Item_C.Input=True
+BP_Item_C.HLOD=True
+BP_Item_C.Physics=True
+BP_Item_C.Networking=True
+BP_Item_C.WorldPartition=True
+BP_Item_C.Events=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Assets/PolygonSpy/Materials/Mat_PolygonSpy_01_A.Mat_PolygonSpy_01_A=1
@@ -2221,6 +2340,11 @@ SphereComponent.AssetUserData=False
 /Game/Assets/PolygonOffice/Rigs/RTG_XBot.RTG_XBot=0
 /Game/Blueprints/Interactables/BP_Interactable.BP_Interactable=0
 /Game/Blueprints/Player/BP_PlayerCharacter.BP_PlayerCharacter=0
+/Game/Blueprints/Interactables/BP_InteractableItem.BP_InteractableItem=0
+/Game/Blueprints/HUDs/WBP_InfoWidget.WBP_InfoWidget=0
+/Game/Blueprints/Interactables/BP_Item.BP_Item=0
+/Game/Blueprints/EItemType.EItemType=0
+/Game/Blueprints/Items/BP_Item.BP_Item=0
 
 [MaterialEditor]
 PrimType=1
@@ -2581,4 +2705,100 @@ bHideUnrelatedNodes=False
 
 [DetailCategoriesAdvanced]
 SphereComponent.Rendering=False
+TextBlock.Appearance=True
+TextBlock.Behavior=True
+
+[WidgetTemplatesExpanded]
+Common=False
+Audio=False
+Editor=False
+Input=False
+Lists=False
+Misc=False
+Optimization=False
+Panel=False
+Primitive=False
+Special Effects=False
+Synth=False
+User Created=False
+Advanced=False
+
+[UMGEditor.Designer]
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
+bIsInPortraitMode=False
+ProfileName=
+ScaleFactor=1
+bCanPreviewSwapAspectRatio=False
+
+[UMGSequencerSettings SequencerSettings]
+AutoChangeMode=None
+AllowEditsMode=AllEdits
+KeyGroupMode=KeyChanged
+KeyInterpolation=Auto
+bAutoSetTrackDefaults=False
+SpawnPosition=SSP_Origin
+bCreateSpawnableCameras=True
+bShowRangeSlider=False
+bIsSnapEnabled=True
+bSnapKeyTimesToInterval=True
+bSnapKeyTimesToKeys=True
+bSnapSectionTimesToInterval=True
+bSnapSectionTimesToSections=True
+bSnapKeysAndSectionsToPlayRange=False
+bSnapPlayTimeToKeys=False
+bSnapPlayTimeToSections=False
+bSnapPlayTimeToMarkers=False
+bSnapPlayTimeToInterval=True
+bSnapPlayTimeToPressedKey=True
+bSnapPlayTimeToDraggedKey=True
+bSnapCurveValueToInterval=False
+bShowSelectedNodesOnly=False
+bRewindOnRecord=False
+bLeftMouseDragDoesMarquee=False
+ZoomPosition=SZP_CurrentTime
+bAutoScrollEnabled=False
+bLinkCurveEditorTimeRange=False
+bSynchronizeCurveEditorSelection=True
+bIsolateCurveEditorToSelection=True
+LoopMode=SLM_NoLoop
+bKeepCursorInPlayRangeWhileScrubbing=False
+bKeepPlayRangeInSectionBounds=True
+ZeroPadFrames=0
+JumpFrameIncrement=(Value=5)
+bShowLayerBars=True
+bShowKeyBars=True
+bInfiniteKeyAreas=False
+bShowChannelColors=False
+bShowStatusBar=True
+bShowTickLines=True
+bShowSequencerToolbar=True
+KeyAreaCurveExtents=
+KeyAreaHeightWithCurves=15.000000
+ReduceKeysTolerance=0.000100
+bDeleteKeysWhenTrimming=True
+bDisableSectionsAfterBaking=True
+bCleanPlaybackMode=True
+bActivateRealtimeViewports=True
+bEvaluateSubSequencesInIsolation=False
+bRerunConstructionScripts=True
+bShowDebugVisualization=False
+bVisualizePreAndPostRoll=True
+bCompileDirectorOnEvaluate=False
+TrajectoryPathCap=250
+FrameNumberDisplayFormat=Seconds
+MovieRendererName=
+bAutoExpandNodesOnSelection=True
+TreeViewWidth=0.300000
+
+[SuppressableDialogs]
+ChangeVariableType_Warning=False
+
+[/Script/OutputLog.OutputLogSettings]
+LogTimestampMode=None
+CategoryColorizationMode=None
+bCycleToOutputLogDrawer=True
+bEnableOutputLogWordWrap=False
+bEnableOutputLogClearOnPIE=False
 
