--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -157,12 +157,10 @@ LastLevel=/Game/Maps/DemoMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/Items/BP_Item.BP_Item
-OpenAssetsAtExit=/Game/Blueprints/Player/BP_PlayerCharacter.BP_PlayerCharacter
-OpenAssetsAtExit=/Game/Blueprints/HUDs/WBP_InfoWidget.WBP_InfoWidget
+OpenAssetsAtExit=/Game/Blueprints/Player/BP_PlayerAnimInstance.BP_PlayerAnimInstance
 
 [RootWindow]
-ScreenPosition=X=634.000 Y=306.000
+ScreenPosition=X=363.000 Y=0.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -1204,6 +1202,8 @@ MovieSceneCapture.TimeStamp=2022.11.24-19.32.23
 MovieSceneCapture.LastCompileMethod=Unknown
 SequencerWidgets.TimeStamp=2022.11.24-19.32.26
 SequencerWidgets.LastCompileMethod=Unknown
+AnimationEditor.TimeStamp=2022.11.24-19.32.16
+AnimationEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
@@ -1257,7 +1257,7 @@ TimelineEnabledSnaps=MontageSection
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.SkeletalMeshes\" "
 PersonaPreviewSceneDescription="\"Object\" "
 PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object\" \"Object.SkeletalMeshes\" "
@@ -1276,7 +1276,7 @@ PrimitiveComponent="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
 CapsuleComponent="\"Object\" "
-ShapeComponent="\"Object\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ShapeComponent="\"Object\" "
 InputAction="\"Object\" "
 InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[0]\" \"Object.Mappings.Mappings.Mappings[0].Triggers\" \"Object.Mappings.Mappings.Mappings[0].Modifiers\" \"Object.Mappings.Mappings.Mappings[1]\" \"Object.Mappings.Mappings.Mappings[5]\" \"Object.Mappings.Mappings.Mappings[5].Triggers\" \"Object.Mappings.Mappings.Mappings[5].Modifiers\" \"Object.Mappings.Mappings.Mappings[6]\" \"Object.Mappings.Mappings.Mappings[6].Triggers\" \"Object.Mappings.Mappings.Mappings[7]\" \"Object.Mappings.Mappings.Mappings[7].Triggers\" \"Object.Mappings.Mappings.Mappings[7].Modifiers\" "
 EdGraphNode_Comment="\"Object\" "
@@ -1414,6 +1414,15 @@ Field="\"Object\" "
 WBP_InfoWidget_C="\"Object\" "
 UserWidget="\"Object\" "
 MultiLineEditableTextBox="\"Object\" \"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.TextStyle\" \"Object.Style.WidgetStyle.TextStyle.Font\" \"Object.Style.WidgetStyle.TextStyle.Font.OutlineSettings\" \"Object.Layout.Slot.Object.Layout.Layout|Overlay Slot.Padding\" "
+CharacterMovementComponent="\"Object\" "
+PawnMovementComponent="\"Object\" "
+NavMovementComponent="\"Object\" "
+MovementComponent="\"Object\" "
+BP_PlayerAnimInstance_C="\"Object\" "
+AnimationGraph="\"Object\" "
+EdGraph="\"Object\" "
+AnimGraphNode_SaveCachedPose="\"Object\" "
+BoneProxy="\"Object\" "
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1428,7 +1437,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Blueprints
+ContentBrowserDrawer.SelectedPaths=/Game/Animations
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1483,26 +1492,26 @@ ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/HUDs/WBP_InfoWidget
+MRUItem0=/Game/Blueprints/Player/BP_PlayerAnimInstance
 MRUItem1=/Game/Blueprints/Player/BP_PlayerCharacter
-MRUItem2=/Game/Blueprints/Items/BP_Item
-MRUItem3=/Game/Blueprints/Interactables/BP_Item
-MRUItem4=/Game/Blueprints/EItemType
-MRUItem5=/Game/Blueprints/Interactables/BP_InteractableItem
-MRUItem6=/Game/Blueprints/Interactables/BP_Interactable
-MRUItem7=/Game/Blueprints/BP_PlayerCharacter
-MRUItem8=/Game/Animations/PlayerAnimInstance
-MRUItem9=/Game/Assets/PolygonOffice/Rigs/RTG_XBot
-MRUItem10=/Game/Assets/PolygonOffice/Rigs/IK_Player
-MRUItem11=/Game/Animations/Mixamo/IKRig_XBot
-MRUItem12=/Game/Assets/PolygonOffice/Meshes/Characters/SK_Chr_Boss_Female_01_Skeleton
-MRUItem13=/Game/Assets/PolygonOffice/Meshes/Characters/SK_Chr_Developer_Male_01
-MRUItem14=/Game/Blueprints/Input/InputActions/IA_Look
-MRUItem15=/Game/Blueprints/Input/IMC_Character
-MRUItem16=/Game/Maps/DemoMap
-MRUItem17=/Game/Blueprints/BP_EFTOGameMode
-MRUItem18=/Game/Blueprints/Input/InputActions/IA_Run
-MRUItem19=/Game/Blueprints/Input/InputActions/IA_Move
+MRUItem2=/Game/Animations/Crouching_Idle
+MRUItem3=/Game/Animations/Crouching
+MRUItem4=/Game/Animations/Pulling_Lever
+MRUItem5=/Game/Assets/PolygonOffice/Rigs/RTG_XBot
+MRUItem6=/Game/Animations/Mixamo/IK_XBot
+MRUItem7=/Game/Assets/AnimStarterPack/Crouch_Walk_Fwd_Rifle_Hip
+MRUItem8=/Game/Assets/AnimStarterPack/Crouch_Idle_Rifle_Hip
+MRUItem9=/Game/Blueprints/Player/Input/IMC_Character
+MRUItem10=/Game/Blueprints/HUDs/WBP_InfoWidget
+MRUItem11=/Game/Blueprints/Items/BP_Item
+MRUItem12=/Game/Blueprints/Interactables/BP_Item
+MRUItem13=/Game/Blueprints/EItemType
+MRUItem14=/Game/Blueprints/Interactables/BP_InteractableItem
+MRUItem15=/Game/Blueprints/Interactables/BP_Interactable
+MRUItem16=/Game/Blueprints/BP_PlayerCharacter
+MRUItem17=/Game/Animations/PlayerAnimInstance
+MRUItem18=/Game/Assets/PolygonOffice/Rigs/IK_Player
+MRUItem19=/Game/Animations/Mixamo/IKRig_XBot
 
 [DetailCategories]
 SkeletalMesh.Material Slots=True
@@ -1609,7 +1618,7 @@ SkeletalMeshComponent.Mesh=True
 SkeletalMeshComponent.ComponentTick=True
 SkeletalMeshComponent.Clothing=True
 SkeletalMeshComponent.LeaderPoseComponent=True
-SkeletalMeshComponent.Physics=True
+SkeletalMeshComponent.Physics=False
 SkeletalMeshComponent.AnimationRig=True
 SkeletalMeshComponent.Collision=True
 SkeletalMeshComponent.Deformer=True
@@ -2322,6 +2331,45 @@ BP_Item_C.Physics=True
 BP_Item_C.Networking=True
 BP_Item_C.WorldPartition=True
 BP_Item_C.Events=True
+CharacterMovementComponent.Variable=True
+CharacterMovementComponent.Sockets=True
+CharacterMovementComponent.Character Movement (General Settings)=True
+CharacterMovementComponent.Character Movement: Walking=True
+CharacterMovementComponent.Character Movement: Jumping / Falling=True
+CharacterMovementComponent.ComponentTick=True
+CharacterMovementComponent.Character Movement (Networking)=True
+CharacterMovementComponent.Character Movement: Swimming=True
+CharacterMovementComponent.Character Movement: Flying=True
+CharacterMovementComponent.Character Movement: Custom Movement=True
+CharacterMovementComponent.Character Movement (Rotation Settings)=True
+CharacterMovementComponent.Character Movement: Physics Interaction=True
+CharacterMovementComponent.Character Movement=True
+CharacterMovementComponent.Character Movement: Avoidance=True
+CharacterMovementComponent.RootMotion=True
+CharacterMovementComponent.Character Movement: NavMesh Movement=True
+CharacterMovementComponent.NavMovement=True
+CharacterMovementComponent.Velocity=True
+CharacterMovementComponent.PlanarMovement=True
+CharacterMovementComponent.MovementComponent=True
+CharacterMovementComponent.Tags=True
+CharacterMovementComponent.ComponentReplication=True
+CharacterMovementComponent.Activation=True
+CharacterMovementComponent.Cooking=True
+CharacterMovementComponent.Events=True
+BP_PlayerAnimInstance_C.Default=True
+BP_PlayerAnimInstance_C.RootMotion=True
+BP_PlayerAnimInstance_C.Notifies=True
+BP_PlayerAnimInstance_C.Montage=True
+AnimationGraph.Inputs=True
+AnimationGraph.GraphBlending=True
+AnimGraphNode_SaveCachedPose.GraphNodeDetail=True
+AnimGraphNode_SaveCachedPose.CachedPose=True
+AnimGraphNode_SaveCachedPose.Functions=True
+AnimGraphNode_SaveCachedPose.Tag=True
+AnimGraphNode_Base.Functions=True
+AnimGraphNode_Base.Tag=True
+BoneProxy.Bone=True
+BoneProxy.Transforms=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Assets/PolygonSpy/Materials/Mat_PolygonSpy_01_A.Mat_PolygonSpy_01_A=1
@@ -2345,6 +2393,13 @@ BP_Item_C.Events=True
 /Game/Blueprints/Interactables/BP_Item.BP_Item=0
 /Game/Blueprints/EItemType.EItemType=0
 /Game/Blueprints/Items/BP_Item.BP_Item=0
+/Game/Blueprints/Player/Input/IMC_Character.IMC_Character=1
+/Game/Assets/AnimStarterPack/Crouch_Walk_Fwd_Rifle_Hip.Crouch_Walk_Fwd_Rifle_Hip=0
+/Game/Animations/Mixamo/IK_XBot.IK_XBot=1
+/Game/Animations/Crouching.Crouching=0
+/Game/Blueprints/Player/BP_PlayerAnimInstance.BP_PlayerAnimInstance=0
+/Game/Animations/Pulling_Lever.Pulling_Lever=1
+/Game/Animations/Crouching_Idle.Crouching_Idle=1
 
 [MaterialEditor]
 PrimType=1
@@ -2515,6 +2570,9 @@ Contexts=(Name="AnimationBlueprintEditor.Viewport0",Commands=)
 Contexts=(Name="SkeletonEditor",Commands=)
 Contexts=(Name="SkeletonEditor.Viewport0",Commands=)
 Contexts=(Name="IKRetargetEditor.Viewport0",Commands=)
+Contexts=(Name="AnimationEditor",Commands=)
+Contexts=(Name="AnimationEditor.Viewport0",Commands=)
+Contexts=(Name="IKRigEditor.Viewport0",Commands=)
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2569,8 +2627,22 @@ WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,WorldSettings.World
 WorldPartitionRuntimeSpatialHash=
 IKRigBoneDetails=IKRigBoneDetails.Transforms.Current,
 SphereComponent=SphereComponent.Collision.Collision,
+SkeletalMeshComponent=SkeletalMeshComponent.Materials.MaterialList,
+BP_PlayerCharacter_C=SkeletalMeshComponent.Materials.MaterialList,
+CapsuleComponent=SkeletalMeshComponent.Materials.MaterialList,
+K2Node_VariableGet=SkeletalMeshComponent.Materials.MaterialList,
+PropertyWrapper=SkeletalMeshComponent.Materials.MaterialList,
+K2Node_VariableSet=SkeletalMeshComponent.Materials.MaterialList,
+K2Node_FunctionEntry=SkeletalMeshComponent.Materials.MaterialList,
+InterpCapsuleHeight=SkeletalMeshComponent.Materials.MaterialList,
+BP_PlayerAnimInstance_C=SkeletalMeshComponent.Materials.MaterialList,
+AnimGraphNode_TransitionResult=SkeletalMeshComponent.Materials.MaterialList,
+BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative,
+CameraComponent=SkeletalMeshComponent.Materials.MaterialList,
+EdGraph=SkeletalMeshComponent.Materials.MaterialList,
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Blueprints/Interactables/BP_Interactable.BP_Interactable;
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Game/Blueprints/BP_PlayerCharacter.BP_PlayerCharacter;
@@ -2707,6 +2779,8 @@ bHideUnrelatedNodes=False
 SphereComponent.Rendering=False
 TextBlock.Appearance=True
 TextBlock.Behavior=True
+SkeletalMeshComponent.Physics=True
+K2Node_VariableSet.Variable=True
 
 [WidgetTemplatesExpanded]
 Common=False
